kubernetes-prometheus/alrtmngr/promalertmngr-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: alertmanager
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.test.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: alertmanager
          servicePort: 9093
status:
  loadBalancer:
    ingress:
    - {}
